# PresetsRecognizer

./: .gitignore  .gitmodules  pyproject.toml  readme.md
Recognizer/: main.py
Recognizer/algorithms/: akaze.py  alike_preset.py  brisk.py  disk_recognizer.py  kaze.py  orb.py  r2d2_preset.py  sift.py  superpoint_recognizer.py
Recognizer/data/: cameras.json  gerar_json.py
Recognizer/resultados/: resultados-20260121-183346.json  resultados-20260123-161351.json  resultados-20260125-133405.json  resultados-20260125-133639.json  resultados-20260126-191027-sift.json  resultados-20260126-193650-brisk.json  resultados-20260126-195122-kaze.json  resultados-20260126-201526-r2d2.json  resultados-20260126-202150-superpoint.json  resultados-20260126-204137-orb.json  resultados-20260126-210739-brisk.json  resultados-20260126-212223-kaze.json  resultados-20260126-214626-r2d2.json  resultados-20260127-171453-orb.json  resultados-20260127-171947-sift.json  resultados-20260127-174218-brisk.json  resultados-20260127-175632-kaze.json  resultados-20260127-175931-akaze.json  resultados-20260127-181933-r2d2.json  resultados-20260127-182543-superpoint.json  resultados-20260127-182812-alike.json  resultados-20260127-192004-orb.json  resultados-20260127-192427-sift.json  resultados-20260129-200506-alike.json  resultados-20260129-200938-sift.json  resultados-20260129-203200-brisk.json  resultados-20260129-204721-kaze.json  resultados-20260129-205030-akaze.json  resultados-20260129-211110-r2d2.json  resultados-20260129-211733-superpoint.json  resultados-20260129-212003-alike.json  (+1 more)
(+15 files in other folders)
