[project]
name = "preset-recognizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "six>=1.17.0",
    "torch>=2.10.0",
    "torch-vision>=0.1.6.dev0",
]
